samples/_failures_safe/1761370771_f589b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_caf2a259.c: In function ‘main’:
./samples/SAFE/__tmp_caf2a259.c:147:5: error: expected expression at end of input
  147 |     printf("Decompressed successfully: %.*s\n", (int)
      |     ^~~~~~
./samples/SAFE/__tmp_caf2a259.c:147:5: error: expected declaration or statement at end of input
